move to using postgres for storage

--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,2 @@
-API_URL = 'https://api.github.com/'
-USERNAME = 'jonuhthin'
+NEXT_PUBLIC_SUPABASE_URL=https://your-supabase-url.supabase.co
+NEXT_PUBLIC_SUPABASE_KEY=your-supabase-key
