--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.47.12",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18",
-    "showdown": "^2.1.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
+    "daisyui": "^4.12.23",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
